--- a/stable/debian/index.html
+++ b/stable/debian/index.html
@@ -33,10 +33,10 @@
 <body onload="startTime()"> 
 
 	<nav>
-		<a class="namelogo" href="Homepage.html">D<img id="links" src="Bilddateien\PLA.png">T3I</a>
+		<a class="namelogo" href="index.html">D<img id="links" src="Bilddateien\PLA.png">T3I</a>
 		<a class="navi" href="https://e1ns.cloud/e1ns/?p=PLATO_e1ns" target="_blank"><img id="e1ns" src="Bilddateien\e1ns.png">e1ns Inhouse</a>
 		<a class="navi" href="https://support.plato.de/a/dashboard/default" target="_blank"><img id="fresh" src="Bilddateien\fresh.png">Freshdesk</a>
-		<a class="navi" href="Einstellungen.html" target="iframe_Ansicht"><img id="einstellungen" src="Bilddateien\einstellungen.png">Einstellungen</a> 
+		<a class="navi" href="einstellungen.html" target="iframe_Ansicht"><img id="einstellungen" src="Bilddateien\einstellungen.png">Einstellungen</a> 
 		<a class="time" id="txt"></a> 
 		<a class="date" id="datetime"></a>
 	</nav>	
