--- a/stable/debian/einstellungen.html
+++ b/stable/debian/einstellungen.html
@@ -11,7 +11,7 @@
 	<h1> Wählen sie Ihre gewünschte Farbe </h1>
 		<div>
 			<a href="HomepageBlau.html" target="_parent" id="blau"> Blau </a> <br><br><br>
-			<a href="HomepageGrün.html" target="_parent" id="gruen"> Grün </a>	<br><br><br>
+			<a href="HomepageGruen.html" target="_parent" id="gruen"> Grün </a>	<br><br><br>
 			<a href="Homepage.html" target="_parent" 	  id="rot"> Rot (Standart) </a>	
 		</div>
 </body>
