--- a/stable/debian/index.html
+++ b/stable/debian/index.html
@@ -44,7 +44,7 @@
 		
 		<div>
 			<details>	
-				<summary id="klappbox"> <img id="Dokumente" src="Bilddateien\Dokumente.png"> Dokumente </summary>
+				<summary id="klappbox"> <img id="dokumente" src="Bilddateien\Dokumente.png"> Dokumente </summary>
 					<ul> 
 						<li>SCIO/e1ns Installationen</li>
 							<a href="SCIOe1nsInstallation\Installationschecklist.html" target="iframe_Ansicht"><button><img id="ansicht" src="Bilddateien\ansicht.png">View</button></a>
